fix search button + fix css mobile issue (content out of box)

--- a/src/frontend/css/engine_2.scss
+++ b/src/frontend/css/engine_2.scss
@@ -1,4 +1,9 @@
 /******* CSS ACCORDING TO FINAL CSS *********/
+html,body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
 .example-container {
     position: absolute !important;
     top: 0;
